# llm_eval

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: sample_run.yaml
data/corpus/: sample_corpus.jsonl
data/datasets/: sample_qa.jsonl
evalab/: __init__.py  cli.py
evalab/api/: __init__.py  main.py  schemas.py
evalab/api/routes/: __init__.py  compare.py  metrics.py  runs.py
evalab/attribution/: __init__.py  probes.py  taxonomy.py
evalab/config/: __init__.py  defaults.py  schemas.py
evalab/dashboard/: __init__.py  app.py
evalab/dashboard/pages/: compare.py  example_viewer.py  runs.py
evalab/data/: __init__.py  loader.py  schemas.py  versioning.py
evalab/evaluation/: __init__.py  accuracy.py  base.py  calibration.py  cost_latency.py  faithfulness.py  robustness.py  semantic.py
evalab/generation/: __init__.py  base.py  openai_backend.py  prompt.py  result.py  vllm_backend.py
evalab/pipeline/: __init__.py  runner.py
evalab/retrieval/: __init__.py  base.py  bm25.py  chunker.py  dense.py  hybrid.py
evalab/storage/: __init__.py  artifacts.py  database.py  models.py  registry.py
prompts/: classification_v1.jinja  confidence.jinja  judge_faithfulness.jinja  paraphrase.jinja  qa_v1.jinja  rag_qa_v1.jinja  rag_qa_v2.jinja  summarization_v1.jinja
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_chunking.py  test_config.py  test_metrics.py  test_retriever.py
